# NewCalcRuleTool

./: README.md
source/CMAKE/: CMakeLists.txt  generate_Sln.bat
source/CMAKE/CMake/: cotire.cmake
source/CMAKE/GBCQCopy/: CMakeLists.txt
source/CMAKE/NewCalcRuleTool/: CMakeLists.txt
source/GBCQCopy/: CopyAllReleaseDebug32.cmd
source/NewCalcRuleTool/: GMPZipUtils.cpp  GMPZipUtils.h  main.cpp  widget.cpp  widget.h
